Refactor two - Organized responses in a Responder class